# livekit_cpp_sdk

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  LiveKitCppClientConfig.cmake.in  README.md  protoc_launch_issue_macos.txt
demo/: AudioServiceControl.qml  CMakeLists.txt  CameraOptionsComboBox.qml  CameraRenderer.qml  ChatView.qml  Client.qml  ConnectForm.qml  ElementsGrid.qml  Info.plist.in  LocalMediaView.qml  Main.qml  MediaOptionsForm.qml  ParticipantMediaView.qml  ParticipantView.qml  Resources.qrc  SessionForm.qml  SharingSelectionForm.qml  TextMultiLine.qml  TextPanel.qml  TrackActivityIndicator.qml  VideoDiagnosticsView.qml  VideoRenderer.qml  VideoTrackContextMenu.qml  audiodevice.cpp  audiodevice.h  audiodevicewrapper.cpp  audiodevicewrapper.h  audiorecordingoptions.cpp  audiorecordingoptions.h  audiotrack.cpp  audiotrack.h  audiotrackwrapper.cpp  audiotrackwrapper.h  blurvideofilter.cpp  blurvideofilter.h  cameraModelComboBox.qml  cameradevice.cpp  cameradevice.h  cameradevicewrapper.cpp  cameradevicewrapper.h  (+61 more)
demo/mac/: Info.plist
include/: AudioTrack.h  CameraOptions.h  CameraTrack.h  CommandReceiver.h  CommandSender.h  ConnectOptions.h  DataPublishOptions.h  LiveKitClientExport.h  LiveKitError.h  LiveKitRoom.h  LiveKitRoomOptions.h  LiveKitService.h  LiveKitServiceState.h  LocalParticipant.h  LoggingSeverity.h  LogsReceiver.h  MediaDevice.h  MemoryBlock.h  MicrophoneOptions.h  NetworkType.h  Options.h  Participant.h  ParticipantListener.h  ReconnectMode.h  RemoteAudioTrack.h  RemoteParticipant.h  RemoteParticipantListener.h  RemoteParticipants.h  RemoteVideoTrack.h  Room.h  RoomListener.h  RoomOptions.h  RoomState.h  Service.h  Session.h  SignalClient.h  SignalClientWs.h  SignalOptions.h  SignalServerListener.h  SignalTransportListener.h  (+8 more)
include/core/: ReconnectMode.h  SignalClient.h  SignalClientListener.h  SignalClientWs.h  SignalServerListener.h  SignalTransportListener.h  Url.h
include/e2e/: DefaultKeyProvider.h  E2ECryptoError.h  E2ECryptor.h  E2EEOptions.h  E2EKeyHandler.h  KeyProvider.h  KeyProviderOptions.h  ParticipantKeyHandler.h
include/livekit/: LiveKitError.h  NetworkType.h  Options.h  Participant.h  ParticipantListener.h  RemoteParticipant.h  RemoteParticipantListener.h  Service.h  ServiceListener.h  ServiceState.h  Session.h  SessionListener.h  SessionState.h  SignalClient.h  SignalClientWs.h  SignalServerListener.h  SignalTransportListener.h  TransportState.h
include/media/: AudioSink.h  AudioTrack.h  AudioTrackSink.h  CameraDeviceListener.h  CameraEventsListener.h  CameraOptions.h  MediaAuthorizationLevel.h  MediaDevice.h  MediaDeviceListener.h  MediaEventsListener.h  RemoteVideoTrack.h  Track.h  VideoDevice.h  VideoFrame.h  VideoFrameQtHelper.h  VideoFrameType.h  VideoSink.h  VideoTrack.h  VideoType.h
include/rtc/: AddTrackRequest.h  AudioTrackFeature.h  BackupCodecPolicy.h  ClientConfigSetting.h  ClientConfiguration.h  Codec.h  DataChannelInfo.h  DisabledCodecs.h  EncryptionType.h  ICEServer.h  ICETransportPolicy.h  JoinResponse.h  LeaveRequest.h  MuteTrackRequest.h  ParticipantInfo.h  ParticipantKind.h  ParticipantState.h  ParticipantTracks.h  ParticipantUpdate.h  Pong.h  ReconnectResponse.h  Room.h  RoomInfo.h  RoomUpdate.h  Sdk.h  ServerEdition.h  ServerInfo.h  SessionDescription.h  SignalTarget.h  SimulateScenario.h  SimulcastCodecInfo.h  SpeakersChanged.h  StreamState.h  StreamStateUpdate.h  SubscribedQuality.h  SubscribedQualityUpdate.h  SubscriptionError.h  SubscriptionPermission.h  SubscriptionResponse.h  SyncState.h  (+11 more)
include/stats/: Stats.h  StatsAttribute.h  StatsCodecExt.h  StatsInboundRtpStreamExt.h  StatsPeerConnectionExt.h  StatsRemoteInboundRtpStreamExt.h  StatsRemoteOutboundRtpStreamExt.h  StatsReport.h  StatsSentRtpStreamExt.h  StatsType.h  StatsVideoSourceExt.h
include/websocket/: Websocket.h  WebsocketBlob.h  WebsocketCloseCode.h  WebsocketEndPoint.h  WebsocketError.h  WebsocketFactory.h  WebsocketFailure.h  WebsocketListener.h  WebsocketOptions.h  WebsocketState.h  WebsocketTls.h  WebsocketTlsMethod.h  WebsocketTlsPeerVerification.h
src/: AbslAliasing.h  CommandSender.cpp  DataChannelsStorage.cpp  DataChannelsStorage.h  DataExchangeListener.h  E2ESecurityFactory.h  FrameCodecFactory.h  LiveKitRoom.cpp  LiveKitService.cpp  LocalParticipant.cpp  LocalParticipant.h  LocalParticipantImpl.cpp  LocalParticipantImpl.h  MarshalledTypesFwd.h  MemoryBlock.cpp  MemoryBlock.h  ParticipantImpl.h  ProtoMarshaller.cpp  ProtoMarshaller.h  ProtoUtils.cpp  ProtoUtils.h  RTCEngine.cpp  RTCEngine.h  RTCMediaEngine.cpp  RTCMediaEngine.h  RemoteParticipantImpl.cpp  RemoteParticipantImpl.h  RemoteParticipants.cpp  RemoteParticipants.h  RemoteParticipantsImpl.cpp  RemoteParticipantsImpl.h  RequestInterceptor.cpp  RequestInterceptor.h  RequestSender.cpp  RequestSender.h  ResponseInterceptor.cpp  ResponseInterceptor.h  ResponseReceiver.cpp  ResponseReceiver.h  Room.cpp  (+9 more)
src/common/: ComStatus.cpp  ComStatus.h  ScopedComInitializer.cpp  ScopedComInitializer.h  Utils.cpp  Utils.h  Utils.mm  VersionInfo.in
src/core/: SignalClient.cpp  SignalClientWs.cpp
src/mac/: AppEnvironment.mm  CFAutoReleaseTraits.h  MediaAuthorization.mm  Utils.mm
src/media/: LocalTrack.h  LocalTrackImpl.h  RemoteTrackImpl.h  TrackImpl.h  TrackManager.h
src/rtc/: DataChannelsStorage.cpp  DataChannelsStorage.h  LocalParticipant.cpp  RTCMediaEngine.h  RemoteParticipantImpl.cpp  RemoteParticipants.cpp  RemoteParticipantsListener.h  Service.cpp
src/service/: DefaultKeyProvider.cpp  Listeners.h  Loggable.h  MediaAuthorization.cpp  MediaAuthorization.h  MutexTraits.h  ParticipantKeyHandler.cpp  ProtectedObj.h  ProtectedObjAliases.h  RequestSender.cpp  ResponseReceiver.cpp  Seq.h  SharedLockGuard.h  ThreadExecution.cpp  ThreadExecution.h  ThreadPriority.h  ToString.cpp  Utils.cpp  Utils.h  Utils.mm  Websocket.cpp
src/signaling/: ProtoUtils.cpp  ProtoUtils.h  RequestInterceptor.cpp  SignalClientWs.cpp  SysInfo.h  (+1 more)
test/: main.cpp
webrtc/: webrtc_build_mac.sh
webrtc_build_scripts/: desktop_windows_crt.patch  webrtc_build_mac.sh  webrtc_build_win.bat
(+1160 files in other folders)
